# notas-musicais

./: mkdocs.yml  pyproject.toml
docs/: index.md
notas_musicais/: escalas.py
tests/: test_escalas.py
