[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["Marlon Rozindo <marlon.saura@owshq.com>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
taskipy = "^1.10.4"
black = "^23.3.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.9"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 88

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
forcelint = "black . && isort ."
docs = "mkdocs serve"
test = "pytest -s -x --cov=notas_musicais"
post_test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
